<resources>
    <string name="app_name">GameStop</string>
    <string name="gamelogo">logo</string>
    <string name="game_one">GAME ONE</string>
    <string name="check_out">Check Out</string>
    <string name="full_name">FULL NAME</string>
    <string name="checkout_button">CHECK OUT</string>
    <string name="game">GAME</string>
    <string name="one">ONE</string>
    <string name="address">ADDRESS</string>
    <string name="city">CITY</string>
    <string name="postal_code">POSTAL CODE</string>
    <string name="email">EMAIL</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="expiry_date_mm_yy">EXPIRY DATE (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="playstation5">Playstation5</string>
    <string name="sony_playstation_5_console">Sony PlayStation 5 Console</string>
    <string name="price_599_99cad">Price: $599.99CAD</string>
    <string name="microsoft_xbox_series_x">Microsoft XBOX Series X</string>
    <string name="price_499_99cad">Price: $499.99CAD</string>
    <string name="nintendo_switch_2">Nintendo Switch 2</string>
    <string name="price_399_99cad">Price: $399.99CAD</string>
    <string name="buy">BUY</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_id">Email id</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="auto">AUTO</string>
    <string name="zone">ZONE</string>
    <string name="sign_up_page">SIGN UP</string>
    <string name="sign_in_page">SIGN IN</string>
    <string name="continu_2">Continue</string>
    <string name="welcome_to_babatunde_autos_where_quality_meets_value">Welcome to Babatunde Autos Where Quality Meets value !!</string>
    <string name="get_started">Get Started</string>
    <string name="no_account_register_here">No account? Register here</string>
    <string name="login_btn">Login</string>
    <string name="password_field">Password</string>
    <string name="email_Field">Email</string>
    <string name="LoginDesc_textview">Log In</string>
    <string name="sign_upDesc_textview">Sign Up</string>
    <string name="emailField_signup">Email</string>
    <string name="passwordField_signup">Password</string>
    <string name="confirm_passwordFiled_signup">Confirm Password</string>
    <string name="registerbutton_signUp">Register</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
</resources>